Bug 380854 - Kdenlive exit does not close all processes
Summary: Kdenlive exit does not close all processes
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: unspecified
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
: 383868 384777 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-06-05 06:25 UTC by phil4000n
Modified: 2018-06-15 09:16 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description phil4000n 2017-06-05 06:25:22 UTC
OS: Win10 Familly multi-users
Kdenlive 17.04 from https://kdenlive.org/download/

To repeat the bug:
1/ open kdenlive (I tested in a non-admin account)
2/ close kdenlive
3/ CRTL+ALT+DEL to open Windows process manager and sort the process alphabetically to see that at least 2 kdenlive processes are opened.
4/ kill the kdenlive processes.


This can be annoying as kdenlive keeps a handle on the media used and so you might no be able to delete, move, etc. until you killed the kdenlive processes.
Comment 1 svofski 2017-06-13 12:18:03 UTC
This happens to me too. kdenlive has to be restarted often and with time it accumulates a lot of stale processes. There are other related processes that it creates and not kills, but they seem to not accumulate.
Comment 2 Vincent PINON 2017-08-21 21:50:28 UTC
Git commit d6cea2efee824f8ed51f29d83e99cedda0ad92c0 by Vincent Pinon.
Committed on 21/08/2017 at 20:20.
Pushed by vpinon into branch 'Applications/17.08'.

Windows: terminate KDE session on window close

M  +3    -0    src/mainwindow.cpp

https://commits.kde.org/kdenlive/d6cea2efee824f8ed51f29d83e99cedda0ad92c0
Comment 3 Jean-Baptiste Mardelle 2017-09-05 17:16:43 UTC
Git commit 3cf8cc478fa25e04143666997063e83c692d68df by Jean-Baptiste Mardelle, on behalf of Vincent Pinon.
Committed on 05/09/2017 at 17:07.
Pushed by mardelle into branch 'refactoring_timeline'.

Windows: terminate KDE session on window close

M  +3    -0    src/mainwindow.cpp

https://commits.kde.org/kdenlive/3cf8cc478fa25e04143666997063e83c692d68df
Comment 4 Christoph Feck 2017-09-17 16:39:54 UTC
*** Bug 383868 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2017-10-04 15:05:08 UTC
*** Bug 384777 has been marked as a duplicate of this bug. ***
Comment 6 21Naown 2018-01-18 01:46:48 UTC
(In reply to Vincent PINON from comment #2)
> Git commit d6cea2efee824f8ed51f29d83e99cedda0ad92c0 by Vincent Pinon.
> Committed on 21/08/2017 at 20:20.
> Pushed by vpinon into branch 'Applications/17.08'.
> 
> Windows: terminate KDE session on window close
> 
> M  +3    -0    src/mainwindow.cpp
> 
> https://commits.kde.org/kdenlive/d6cea2efee824f8ed51f29d83e99cedda0ad92c0

From the version 17.12.0, “kdenlive.exe” + “dbus-daemon.exe” are not closed: I have to kill them every time.
Comment 7 benthad 2018-06-15 09:16:05 UTC
OS = Windows 10 Pro (1709)
Kdenlive-18.04.1

Multiple kdenlive.exe processes are showing in Task Manager even after I close kdenlive.