Windows: terminate KDE session on window close

BUG: 380854